Update and rename sign up.html to index.html

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
                 <br>
             <table width="40%" height="50%" style="border: 1cm; border-color: black;" border="1cm" style="background-color: azure;">
                             <tr>
-                    <td style="background-color: aquamarine;"><a href="C:\Users\maina\Documents\HTML BOOKS AND REVISION\sign up.html" >Sign Up</a></td>
-                    <td style="background-color: beige;"> <a href="C:\Users\maina\Downloads\log in.html">Login</a></td>
+                    <td style="background-color: aquamarine;">Sign Up</td>
+                    <td style="background-color: beige;"> <a href="https://mwauramvs.github.io/LogIn-Form/">Login</a></td>
                 </tr>
             </table>
         </center>
-        <center><u><h2>Sign Up For Free</h2></u></center>            <center><form form action="https://mwauramvs.github.io/tributeproject/">
+        <center><u><h2>Sign Up For Free</h2></u></center>            <center><form form action="https://mwauramvs.github.io/LogIn-Form/">
                 <table width="200" height="200" border="1px">
                     <tr>
                         <td> <input type="text" name="" placeholder="First name*"  required></td>
